update ci and docker file